tests/compile_fail/thread_local/thread_local.stderr
warning: missing documentation for an associated type
  --> $DIR/runtime.rs:52:5
   |
52 |     type Id: Copy + Eq;
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/lib.rs:2:9
   |
2  | #![warn(missing_docs)]
   |         ^^^^^^^^^^^^

warning: 1 warning emitted

error[E0277]: `*mut ()` cannot be sent between threads safely
 --> $DIR/thread_local.rs:7:5
  |
6 |     fn assert_send_sync<T: Send + Sync>(t: T) {}
  |                            ---- required by this bound in `assert_send_sync`
7 |     assert_send_sync(Id::new());
  |     ^^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
  |
  = help: within `pui::typeid_tl::Type<Id>`, the trait `Send` is not implemented for `*mut ()`
  = note: required because it appears within the type `ThreadLocal`
  = note: required because it appears within the type `(pui::Invariant<Id>, ThreadLocal)`
  = note: required because it appears within the type `PhantomData<(pui::Invariant<Id>, ThreadLocal)>`
  = note: required because it appears within the type `pui::typeid_tl::TypeHandle<Id>`
  = note: required because it appears within the type `pui::typeid_tl::Type<Id>`

error[E0277]: `*mut ()` cannot be shared between threads safely
 --> $DIR/thread_local.rs:7:5
  |
6 |     fn assert_send_sync<T: Send + Sync>(t: T) {}
  |                                   ---- required by this bound in `assert_send_sync`
7 |     assert_send_sync(Id::new());
  |     ^^^^^^^^^^^^^^^^ `*mut ()` cannot be shared between threads safely
  |
  = help: within `pui::typeid_tl::Type<Id>`, the trait `Sync` is not implemented for `*mut ()`
  = note: required because it appears within the type `ThreadLocal`
  = note: required because it appears within the type `(pui::Invariant<Id>, ThreadLocal)`
  = note: required because it appears within the type `PhantomData<(pui::Invariant<Id>, ThreadLocal)>`
  = note: required because it appears within the type `pui::typeid_tl::TypeHandle<Id>`
  = note: required because it appears within the type `pui::typeid_tl::Type<Id>`
